tests/signature_verification_failure/signature_verification_failure.exp
Error ------------------------------------------------------------------------------------------------------ arr.js:3:14

Cannot determine type of empty array literal. Please provide an annotation. [missing-empty-array-annot]

   3| export const a = []
                   ^


Error ------------------------------------------------------------------------------------------------------ arr.js:3:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the element type of an empty array. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   3| export const a = []
                       ^^


Error ------------------------------------------------------------------------------------------------------ arr.js:4:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Unexpected
array hole: [signature-verification-failure]

   4| export const b = [1, , 3];
                       ^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ arr.js:5:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Unexpected
spread in array: [signature-verification-failure]

   5| export const c = [1, ...b];
                       ^^^^^^^^^


Error -------------------------------------------------------------------------------------------- array-pattern.js:3:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = ([x, y]) => {};
                        ^^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:5:3

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at property `x`: [signature-verification-failure]

   5|   x = 1;
        ^^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:8:3

Literal properties not yet supported. [unsupported-syntax]

   8|   'b' = 5;
        ^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:14:3

Computed property keys not supported. [unsupported-syntax]

   14|   ['a'] = 3;
         ^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- class.js:15:3

Computed property keys not supported. [unsupported-syntax]

   15|   ['a' + 'b'] = 4;
         ^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------- fn.js:3:13

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   3| function f() {
                  


Error ------------------------------------------------------------------------------------------------------- fn.js:7:12

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   7| function g(x): number {
                 ^


Error ------------------------------------------------------------------------------------------------------- fn.js:7:12

Missing an annotation on `x`. [missing-local-annot]

   7| function g(x): number {
                 ^


Error --------------------------------------------------------------------------------------------------- getset.js:4:12

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at function return: [signature-verification-failure]

   4|     get x() {
                 


Error --------------------------------------------------------------------------------------------------- getset.js:7:11

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   7|     set x(x) { }
                ^


Error -------------------------------------------------------------------------------------------- imports_tparam.js:8:2

Cannot cast `x` to number because `X` [1] is incompatible with number [2]. [incompatible-cast]

   imports_tparam.js:8:2
   8| (x: number); // nope
       ^

References:
   imports_tparam.js:6:9
   6| var x = new (f())();
              ^^^^^^^^^^^ [1]
   imports_tparam.js:8:5
   8| (x: number); // nope
          ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ keyMirror.js:4:28

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Expected
simple key in object: [signature-verification-failure]

   4| export const a = keyMirror({['a' + 'b']: null, b: null});
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ keyMirror.js:8:28

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Expected
simple key in object: [signature-verification-failure]

   8| export const b = keyMirror({...ba});
                                 ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- misc.js:3:24

Cannot resolve module `react`. [cannot-resolve-module]

   3| import * as React from 'react';
                             ^^^^^^^


Error ----------------------------------------------------------------------------------------------------- misc.js:5:15

The type argument of a temporary base type must be a compatible literal type [invalid-temp-type]

   5| export var a: $TEMPORARY$number<'a'> = 42;
                    ^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- misc.js:7:15

Cannot use type without exactly 1 type argument. [nonpolymorphic-type-app]

   7| export var b: $TEMPORARY$number<1, 1> = 42;
                    ^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- misc.js:9:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Expected
simple key in object: [signature-verification-failure]

   9| export const c = {['a' + 'b']: 42};
                       ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- misc.js:11:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Unexpected
spread in array: [signature-verification-failure]

   11| export const d = [...c];
                        ^^^^^^


Error ---------------------------------------------------------------------------------------------------- misc.js:11:22

Property `@@iterator` is missing in object literal [1] but exists in `$Iterable` [2]. [prop-missing]

   misc.js:11:22
   11| export const d = [...c];
                            ^

References:
   misc.js:9:18
    9| export const c = {['a' + 'b']: 42};
                        ^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/prelude.js:50:11
   50| interface $Iterable<+Yield,+Return,-Next> {
                 ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- misc.js:13:19

Cannot reassign constant `d` [1]. [reassign-const]

   misc.js:13:19
   13| export const e = (d += d);
                         ^

References:
   misc.js:11:14
   11| export const d = [...c];
                    ^ [1]


Error ---------------------------------------------------------------------------------------------------- misc.js:13:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this assignment expression. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   13| export const e = (d += d);
                         ^^^^^^


Error ---------------------------------------------------------------------------------------------------- misc.js:13:19

Cannot use operator `+=` with operands array literal [1] and array literal [1] [unsafe-addition]

   misc.js:13:19
   13| export const e = (d += d);
                         ^^^^^^

References:
   misc.js:11:18
   11| export const d = [...c];
                        ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- misc.js:19:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this literal. Please provide an annotation, e.g., by adding a type cast around this expression.
[signature-verification-failure]

   19| export const w = /foo/;
                        ^^^^^


Error ---------------------------------------------------------------------------------------------------- misc.js:21:18

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Cannot
determine the type of this JSX element. Please provide an annotation, e.g., by adding a type cast around this
expression. [signature-verification-failure]

   21| export const x = <f />;
                        ^^^^^


Error ---------------------------------------------------------------------------------------------- obj-pattern.js:3:19

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = ({x, y}) => {};
                        ^^^^^^


Error ------------------------------------------------------------------------------------------------- obj_decl.js:3:17

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| export var { a } = (42: any);
                      


Error ------------------------------------------------------------------------------------------------- obj_decl.js:5:23

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   5| export var { '42': b } = (42: any);
                            


Error ------------------------------------------------------------------------------------------------- obj_decl.js:7:22

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   7| export var { [b]: c } = (42: any);
                           


Error ----------------------------------------------------------------------------------------------------- rest.js:3:33

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at array pattern: [signature-verification-failure]

   3| module.exports = (x: number, ...z) => {};
                                      ^


Error --------------------------------------------------------------------------------------------------- tparam.js:5:15

Cannot use type `Y` [1] as a value. Types are erased and don't exist at runtime. [type-as-value]

   tparam.js:5:15
   5|     x: typeof Y;
                    ^

References:
   tparam.js:4:16
   4| export class C<Y> {
                     ^ [1]


Error -------------------------------------------------------------------------------------------------- tparam.js:13:32

Cannot use type `X` [1] as a value. Types are erased and don't exist at runtime. [type-as-value]

   tparam.js:13:32
   13| export function f<X>(): typeof X { return x; }
                                      ^

References:
   tparam.js:13:19
   13| export function f<X>(): typeof X { return x; }
                         ^ [1]


Error --------------------------------------------------------------------------------------------------- typeof.js:6:22

`typeof` can only be used to get the type of variables.

   6| export var z: typeof 42 = 42;
                           ^^


Error --------------------------------------------------------------------------------------------- variable-decl.js:3:5

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `x`: [signature-verification-failure]

   3| var x = 0;
          ^



Found 37 errors
